

namespace CAPA_DATOS
{
    public class ResponseService
    {
        public int? status { get; set; }
        public String? message { get; set; }
        public String? value { get; set; }
        public object? body { get; set; }
    }
}